# ghostchain

./: .gitignore  API.md  CHANGELOG.md  CNS_START.md  CONTRACT.md  Cargo.toml  Dockerfile  ETH_INTEGRATION.md  FFI_START_HERE.md  GCC_GAMEPLAN_FALL2025.md  GCC_START_HERE.md  GHOSTBRIDGE_FFI_START.md  GHOSTCHAIN_DOMAINS.md  GHOSTD.md  IDENTITY.md  IPV6.md  KEYSTONE_PH.md  NET.md  NEXT_STEPS_GCC.md  PRIORITY_PROJECT.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  PROTOTYPE_README.md  README.md  ROADMAP.md  SERVICES.md  SMARTCONTRACT_zigrepo.md  TODO.md  TOKEN.md  TOKENS.md  WALLET.md  WALLETD.md  WEB_DOMAINS.md  ZQLITE_INTEGRATION.md  build.zig  build.zig.zon  cDNS.md  docker-compose.dev.yml  docker-compose.yml  grpc_API.md  (+2 more)
archive-gcc-docs/: AGENTS.md  AUTH.md  BRAINSTORM623.md  CHANGELOG.md  CNS-DEV.md  FOCUS_JULY5.md  PRIORITY_GAMEPLAN.md  PROTOCOLS.md  SMARTCONTRACT.md  WALLET-NOTES.md  cDNS.md
cns/: Cargo.toml  README.md
cns/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: cli.rs  cns_integration.rs  gid.rs  lib.rs  main.rs  tokens.rs  types.rs  zns_integration.rs  zvm_integration.rs
core/src/blockchain/: integration.rs  local_testnet.rs  mod.rs
core/src/consensus/: mod.rs
core/src/contracts/: deployment.rs  gas.rs  ghostchain_tokens.rs  mod.rs  native.rs
core/src/crypto/: mod.rs
core/src/domains/: domain_testing.rs  ghost.rs  mod.rs  unstoppable.rs
core/src/ffi/: ghostbridge_integration.rs  mod.rs  zquic_integration.rs
core/src/network/: mod.rs  quic_transport.rs
core/src/performance/: connection_pool.rs  metrics.rs  mod.rs
core/src/rpc/: mod.rs
core/src/services/: gquic.rs  mod.rs  zquic.rs  zvm.rs
core/src/storage/: mod.rs
docker/: entrypoint.sh  init-db.sql  nginx.conf  prometheus.yml
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
gcc-docs/: FINALIZED_GAMEPLAN.md  HISTORY.md  QNGP.md  README.md  WEB5.md  WHATSNEEDEDNEXT.md  WHITEPAPER.md  architecture.md  dApps.md  guardian.md  token-economy.md
ghostd/: Cargo.toml  README.md
ghostd/src/: api.rs  config.rs  daemon.rs  main.rs  zquic_integration.rs
gid/: Cargo.toml  README.md
gid/src/: lib.rs
gledger/: Cargo.toml  README.md
gledger/src/: lib.rs  main.rs
gsig/: Cargo.toml  README.md
gsig/src/: lib.rs  main.rs
integration-tests/: Cargo.toml
proto/: ghostchain.proto
reference-docs/: BACKBONE-BRAINSTORM.md  BRAINSTORM.md  FAQ.md  IMPLEMENTATION_GAMEPLAN.md  ROADMAP.md
scripts/: docker-build.sh  start-dev.sh
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/crypto/: guardian.rs  mod.rs  shroud_crypto.rs
shared/src/domains/: domain_testing.rs  ghost.rs
shared/src/ffi/: mod.rs
src/: cli.rs  main.rs  main.zig  root.zig  types.rs  zns_integration.rs  zvm_integration.rs
src/blockchain/: block.zig  local_testnet.rs  mod.rs  mod.zig  storage.zig
src/consensus/: mod.zig  pos.zig
src/contracts/: executor.zig  mod.zig  storage.rs
src/crypto/: mod.zig
src/daemon/: ghostd.zig  mod.zig  walletd.zig
src/domains/: ens.rs  web5.rs
src/ffi/: ghostbridge.rs  zquic.rs
src/ledger/: mod.zig
src/network/: mod.rs  mod.zig  node.zig  optimized.rs  p2p.zig  quic_transport.rs
src/network/quic/: client.zig  mod.zig  server.zig
src/performance/: batch_processor.rs  cache.rs  connection_pool.rs  integration.rs
src/realid/: mod.zig
src/rpc/: auth.rs  grpc_server.zig  mod.rs  mod.zig
src/services/: ghostbridge.rs  ghostd.rs  mod.rs  walletd.rs
src/storage/: mod.rs  optimized.rs
src/stubs/: zledger.zig  zvm.zig  zwallet.zig
src/token/: mod.rs
src/tokens/: mod.zig
src/wallet/: mod.zig
src/zns/: mod.zig
walletd/: Cargo.toml  README.md
walletd/src/: api.rs  config.rs  crypto_backend.rs  daemon.rs  identity.rs  main.rs  wallet.rs  zquic_integration.rs
