[workspace]
members = [
    "core",
    "shared",
    "ghostd",
    "walletd",
    "integration-tests"
, "cns", "gid", "gsig", "gledger"]
resolver = "2"

[workspace.dependencies]
# Core async and error handling
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography (Legacy - for compatibility)
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
rand = "0.8"
hex = "0.4"

# Shroud Integration (build dependency)
cc = "1.0"

# Time and identification
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Networking
bytes = "1.5"
futures = "0.3"
tonic = "0.12"
prost = "0.13"
tower = "0.5"
hyper = "1.0"
quinn = "0.10"
rustls = "0.21"
rcgen = "0.11"
tokio-rustls = "0.24"

# GhostChain ecosystem crates
gcrypt = { git = "https://github.com/ghostkellz/gcrypt", version = "0.3.0" }
gquic = { git = "https://github.com/ghostkellz/gquic", version = "0.2.0" }
etherlink = { git = "https://github.com/ghostkellz/etherlink", version = "0.1.0" }
rvm = { git = "https://github.com/ghostkellz/rvm", version = "0.1.0" }
jarvis = { git = "https://github.com/ghostkellz/jarvis", version = "0.1.0" }
wraith = { git = "https://github.com/ghostkellz/wraith", version = "0.1.0" }

# GhostLink integration (legacy)
ghostlink = { git = "https://github.com/ghostkellz/ghostlink", version = "0.3.0", features = ["quic"] }

# JSON-RPC
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-ws-server = "18.0"
jsonrpc-core-client = "18.0"

# Storage
sled = "0.34"
# rocksdb = "0.23"  # Temporarily disabled due to compilation issues

# Development
tempfile = "3.10"

# Build dependencies
tonic-build = "0.12"
