[package]
name = "ghostd"
version = "0.2.0"
edition = "2024"
description = "GhostChain blockchain daemon with QUIC integration"

[[bin]]
name = "ghostd"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-derive = { workspace = true }
jsonrpc-http-server = { workspace = true }
jsonrpc-ws-server = { workspace = true }

# Local dependencies
ghostchain-core = { path = "../core" }
ghostchain-shared = { path = "../shared" }

# QUIC and GhostLink
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
ghostlink = { workspace = true }

[build-dependencies]
cc = { workspace = true }
tonic-build = { workspace = true }
