[package]
name = "ghostchain-integration-tests"
version = "0.1.0"
edition = "2024"
description = "Integration tests for GhostChain ecosystem"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }

# Local dependencies
ghostchain-core = { path = "../core" }
ghostchain-shared = { path = "../shared" }

# Test utilities
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
test-case = "3.3"

[[test]]
name = "integration"
path = "tests/integration.rs"