[package]
name = "ghostchain-shared"
version = "0.1.0"
edition = "2024"
description = "Shared types, crypto, and utilities for GhostChain ecosystem"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[features]
default = ["crypto", "domains", "ffi"]
crypto = []
domains = []
ffi = []